; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_run.c_run_updateslot_cb.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_run.c_run_updateslot_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211com = type { %struct.run_softc* }
%struct.run_softc = type { i32 }

@RT2860_BKOFF_SLOT_CFG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @run_updateslot_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @run_updateslot_cb(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ieee80211com*, align 8
  %4 = alloca %struct.run_softc*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.ieee80211com*
  store %struct.ieee80211com* %7, %struct.ieee80211com** %3, align 8
  %8 = load %struct.ieee80211com*, %struct.ieee80211com** %3, align 8
  %9 = getelementptr inbounds %struct.ieee80211com, %struct.ieee80211com* %8, i32 0, i32 0
  %10 = load %struct.run_softc*, %struct.run_softc** %9, align 8
  store %struct.run_softc* %10, %struct.run_softc** %4, align 8
  %11 = load %struct.run_softc*, %struct.run_softc** %4, align 8
  %12 = load i32, i32* @RT2860_BKOFF_SLOT_CFG, align 4
  %13 = call i32 @run_read(%struct.run_softc* %11, i32 %12, i32* %5)
  %14 = load i32, i32* %5, align 4
  %15 = and i32 %14, -256
  store i32 %15, i32* %5, align 4
  %16 = load %struct.ieee80211com*, %struct.ieee80211com** %3, align 8
  %17 = call i32 @IEEE80211_GET_SLOTTIME(%struct.ieee80211com* %16)
  %18 = load i32, i32* %5, align 4
  %19 = or i32 %18, %17
  store i32 %19, i32* %5, align 4
  %20 = load %struct.run_softc*, %struct.run_softc** %4, align 8
  %21 = load i32, i32* @RT2860_BKOFF_SLOT_CFG, align 4
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @run_write(%struct.run_softc* %20, i32 %21, i32 %22)
  ret void
}

declare dso_local i32 @run_read(%struct.run_softc*, i32, i32*) #1

declare dso_local i32 @IEEE80211_GET_SLOTTIME(%struct.ieee80211com*) #1

declare dso_local i32 @run_write(%struct.run_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
